2007-02-06  Waldo Bastian <waldo.bastian@intel.com>
	* Clearify that %U may result in either local paths or file: URLs
	* Deprecate %d, %n, %D and %N. They aren't usable on Gnome and
	you can do the same with dirname and basename in a script.
	* Clearify that %f, %u, %F or %U should only be used once.
	* Clearify that these codes should be ignored if there is no file
	to open.
	* Forbid the use of field codes in quoted arguments.
	* Clearify that %F and %U should only be used as a stand alone argument.
	* Bumped version to 1.0

2006-10-30  Waldo Bastian <waldo.bastian@intel.com>
        * Remove equal sign from reserved characters in Exec args
        * Add backslash to list of reserved characters in Exec args

2006-10-04  Waldo Bastian <waldo.bastian@intel.com>
        * Deprecate %v, it is FSDevice specific

2006-08-30  Waldo Bastian <waldo.bastian@intel.com>
        * list FSDevice type as KDE specific
        * refer to Icon Theme Specification

2006-08-22  Waldo Bastian <waldo.bastian@intel.com>
        * clarification of Exec key
        * correction of StartupWMClass, clarify StartupNotify (Lubos Lunak)
        * deprecate SortOrder and FilePattern key (Vincent Untz)
        * remove section on "MIME Type caching" from spec (Vincent Untz)
        * groups and keys must be unique (Vincent Untz)
        See http://lists.freedesktop.org/archives/xdg/2006-August/008446.html

2006-05-28  Vincent Untz <vuntz@gnome.org>
        * cleanup of text and some reorg for clearity
        * move all of the legacy-mixed encoding stuff to the appendix
        * deprecate the Swallow* keys
        * improve definition of group headers
        * reorder the list of standard keys so they are sorted by type
        See http://lists.freedesktop.org/archives/xdg/2006-May/008131.html

Tue Jul 13 18:04:11 2004  Jonathan Blandford  <jrb@gnome.org>

	* desktop-entry-spec.xml: Update the MIME description to make it
	more relevent.

2004-04-19  Mark McLoughlin  <mark@skynet.ie>
